# agandock

./: .gitignore  Makefile  README.md  cli_manual.md
agandock_test_run_101/: input_smiles.csv
agandock_test_run_101/pipeline_files/: 1_compounds_for_docking.csv  smiles.txt
agandock_test_run_benzene/: input_smiles.csv
agandock_test_run_multi_101/: output_with_pb.csv
agandock_test_run_multi_101/pipeline_files/: 1_compounds_for_docking.csv  2_extract_affinity_from_pdbqt.csv  3_compounds_for_posebusters.csv  4_pb_out.csv  5_pb_out.csv  unidock_output_batch_1.txt  unidock_pdbqt_batch_1.txt
cli/agandock-cli/: README.md  pyproject.toml  requirements.txt  setup.py
cli/agandock-cli/agandock_cli/: cli.py  docking.py  filter.py
cli/agandock-cli/agandock_cli/inputs/: ligands.csv  minD_APO_C1.pdbqt  minD_APO_C1_conf.txt
cli/agandock-cli/agandock_cli/scripts/: docking_utils.py  streamlit_utils.py
cli/agandock-cli/tests/: test_docking.py  test_filter.py
devops/: docker-compose.yml
devops/jupyterlab/: Dockerfile  environment.yaml
devops/nextjs/: Dockerfile  next.config.ts  nextjs.yaml  package-lock.json  package.json  start.sh
gemini_final_test_multi/: output_with_pb.csv
gemini_final_test_multi_app/: output_with_pb.csv
gemini_final_test_multi_renamed/: output.csv  output_with_pb.csv
gemini_final_test_single/: output_with_pb.csv
gemini_final_test_single_app/: output.csv  salted_compounds.csv
gemini_final_test_single_renamed/: output.csv
gemini_test_run_multi/: output_with_pb.csv
gemini_test_run_single_fixed_2/: input_smiles.csv  output.csv
(+168 files in other folders)
